# telegram_client

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  code-quality.yml
demo/: CMakeLists.txt
demo/src/: demo.cpp  demo.h
src/: App.cpp  App.h  LRUCache.h  MainWindow.cpp  MainWindow.h  MyUpdater.cpp  MyUpdater.h  Photo.cpp  Photo.h  Telegram.h  main.cpp
src/model/: Chat.cpp  Chat.h  ChatList.cpp  ChatList.h  Message.cpp  Message.h  MessageSendingState.cpp  MessageSendingState.h  MessageSponsored.cpp  MessageSponsored.h
src/util/: Image.cpp  Image.h
src/view/: AuthorizationView.cpp  AuthorizationView.h  ChatListView.cpp  ChatListView.h  ChatView.cpp  ChatView.h  MainView.cpp  MainView.h  SpacerForView.cpp  SpacerForView.h  TGIco.cpp  TGIco.h
tests/: ChatModelTests.cpp
